# git-review-cli

./: .gitignore  README.md  opencode_glab_review.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
allure/: index.html
allure/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure/data/test-cases/: 1058f3b62732ad86.json  1070bd26c508f124.json  10720d6b0f1c7022.json  10724065ddd8fd7d.json  1088bd86238aaa5a.json  10ae4989649c687d.json  113fbf6316935c35.json  1147f4b09214ff96.json  1173c8c78494e890.json  1191cb0fc90c8c1e.json  11ab4600ac40eca.json  11c62e1722720a77.json  11f111850ce6ec6d.json  1225c86f3e3870c5.json  122d5fcaac640956.json  124d8ca1ce61e32a.json  125125053fdd266f.json  12682c84cf37b81c.json  12d900fe1bfa01b6.json  12da07f2346e7ffd.json  13126f1ab3c79bbc.json  1377be3935e796bd.json  1402f150a3cf75c1.json  1404fe571dc26eb5.json  14118c18ff0a9340.json  1489887b86843e7d.json  14e176fe0bdba073.json  14e7f7e6c8e406af.json  14ed6b1cb39a6355.json  14f8660346583635.json  15483f43a36559df.json  155c9b42d99fe0bf.json  15db8a6e21ac5aca.json  162d7ed8cf3236e7.json  168511ebb0f391bf.json  16b2b62740dadd3a.json  16b6848d547840a5.json  16c7f414e5e38227.json  172937cdb3750a12.json  1770f9aa6c974db0.json  (+1100 more)
allure/export/: influxDbData.txt  prometheusData.txt
allure/history/: duration-trend.json  history.json
allure/widgets/: behaviors.json  duration-trend.json  duration.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
git_review_cli/: __init__.py  cli.py  git.py
git_review_cli/analyzers/: base.py
git_review_cli/formatters/: __init__.py  base.py  json.py  markdown.py
git_review_cli/providers/: base.py  gitlab.py
src/: cli.py  git.py
src/analyzers/: __init__.py  ownership.py  patterns.py
src/formatters/: markdown.py
src/git_review_cli/: cli.py  git.py
src/git_review_cli/analyzers/: __init__.py  ownership.py
src/git_review_cli/formatters/: json.py  markdown.py
src/git_review_cli/providers/: gitlab.py
src/providers/: __init__.py  base.py  gitlab.py
tests/test_analyzers/: test_patterns.py
tests/test_formatters/: test_json.py  test_markdown.py
