[project]
name = "git-review-cli"
version = "1.0.6"
description = "Provider-agnostic code review toolkit for GitLab merge requests"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Alvian", email = "pid.alvian@gmail.com" },
]
requires-python = ">=3.9"
keywords = ["gitlab", "merge-request", "code-review", "cli", "glab"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/vianhanif/git-review-cli"
Repository = "https://github.com/vianhanif/git-review-cli"
Issues = "https://github.com/vianhanif/git-review-cli/issues"

[project.scripts]
git-review-cli = "git_review_cli.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "allure-pytest>=2.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--alluredir=allure-results -v"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
